# ArcReel

./: .gitignore  pyproject.toml
.github/: dependabot.yml
.github/workflows/: release-please.yml  test.yml
docs/: jianying.md
docs/superpowers/specs/: 2026-03-23-jianying-draft-export-design.md  2026-03-23-session-memory-leak-fix-design.md  2026-04-15-reference-to-video-mode-design.md
frontend/: package.json  tsconfig.json  vitest.config.ts
frontend/src/: api.ts
frontend/src/components/canvas/: OverviewCanvas.test.tsx  OverviewCanvas.tsx
frontend/src/components/copilot/: AgentCopilot.test.tsx  AgentCopilot.tsx
frontend/src/components/layout/: ExportScopeDialog.tsx  GlobalHeader.test.tsx  GlobalHeader.tsx  (+1 more)
frontend/src/css/: styles.css
frontend/src/hooks/: useAnchoredPopover.test.tsx  useAnchoredPopover.ts  useAssistantSession.test.tsx  useTasksSSE.test.tsx
frontend/src/stores/: config-status-store.test.ts
frontend/src/types/: system.ts
lib/: data_validator.py  project_manager.py  script_models.py
lib/db/: __init__.py
lib/reference_video/: __init__.py  shot_parser.py
server/agent_runtime/: service.py  session_manager.py
server/routers/: projects.py  system_config.py
server/services/: jianying_draft_service.py
tests/: conftest.py  factories.py  fakes.py  test_assistant_service_more.py  test_jianying_draft_routes.py  test_jianying_draft_service.py  test_session_lifecycle.py  test_session_manager_more.py  test_system_config_router.py
tests/lib/: test_data_validator_reference.py  test_script_models_reference.py  test_shot_parser.py
(+12 files in other folders)
